# stack-overflow-ai-assistant

./: README.md  check_torch_device.py  pyproject.toml  requirements.txt
backend/: app.py  rag_pipeline.py  requirements.txt  test_pipeline.py  utils.py
frontend/: index.html
notebook/: Data_Cleaning_EDA.ipynb  Data_Extraction.ipynb  Questions_Vector_Indexing.ipynb
